--- a/_config.yml
+++ b/_config.yml
@@ -77,5 +77,7 @@ theme: landscape
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
-deploy:  
-    type: 
+deploy: 
+    type: git
+    repo: https://github.com/Xingyuan-Pan/Xingyuan-Pan.github.io.git
+    branch: master
